syntax = "proto3";

package basic.user.v1;
option go_package = "github.com/kzmake/examples/basic-service-invocation/api/user/v1;user";

import "google/api/annotations.proto";

service UserService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/user/v1/users"
      body: "*"
    };
  }
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  User user = 1;
}

message User {
  string id = 1;
  string name = 2;
  string blog_url = 3;
  string email_address = 4;
  string wallet_id = 5;
}
